working quiz generation to storyblok then playing at frontend

--- a/package.json
+++ b/package.json
@@ -1,25 +1,31 @@
 {
   "name": "bitcoinquizflow",
   "version": "1.0.0",
-  "description": "Auto-generate Bitcoin quizzes from blog posts using Storyblok + Runner H",
+  "description": "Auto-generate Bitcoin quizzes from blog posts using Storyblok + AI",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "dev": "runnerh dev",
-    "build": "runnerh build",
-    "run": "runnerh run",
-    "frontend": "vite serve src/frontend"
+    "dev": "node src/index.js",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "frontend": "vite serve src/frontend --port 3000 --host",
+    "frontend:build": "vite build src/frontend",
+    "scrape": "node src/agents/scrapeBlogPosts.js",
+    "generate": "node src/workflow.js"
   },
   "dependencies": {
-    "@runnerh/cli": "^1.0.0",
-    "@storyblok/management-api": "^1.0.0",
     "@google/generative-ai": "^0.2.0",
-    "cheerio": "^1.0.0-rc.12",
     "axios": "^1.6.0",
-    "dotenv": "^16.3.0"
+    "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.3.0",
+    "node-cron": "^3.0.3",
+    "storyblok": "^4.0.0",
+    "storyblok-js-client": "^6.11.0"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
+    "@types/node": "^20.0.0",
+    "@types/node-cron": "^3.0.0",
     "typescript": "^5.0.0",
-    "@types/node": "^20.0.0"
+    "vite": "^5.0.0"
   }
 }
